# Monitoramento-Precos-DBT-SQL

./: .gitignore  .user.yml  pyproject.toml
DBT/: dbt_project.yml
DBT/models/: schema.yml
DBT/models/gold/: gold_commodities.sql  schema.yml
DBT/models/silver/: schema.yml  silver_commodities.sql  silver_mov_commodities.sql
scr/: extract.py
